<?xml version="1.0"?>
<package format="3">
  <name>pyorbbecsdk</name>
  <version>1.3.3</version>
  <description>
   pyorbbecsdk is a python wrapper for the orbbec sdk
  </description>
  <maintainer email="developer@orbbec.com">Orbbec Developer</maintainer>
  <license>MIT</license>
  <build_depend>ros_environment</build_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend>pkg-config</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>libudev-dev</depend>
  <depend>udev</depend>
  <depend>pybind11-dev</depend>
  <depend>python3-dev</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
